// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Catalog Item Learner 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog1"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "minHeight": 205,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="background-image-catalog1"
      />
      <BVLinearGradient
        colors={
          Array [
            0,
            0,
            1711276032,
            3003121664,
            3858759680,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "height": 400.2,
                "minHeight": 215,
                "padding": 24,
              },
            ],
            undefined,
          ]
        }
        testID="gradient-catalog1"
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "flex-end",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="22"
            bbWidth="22"
            color="#FFFFFF"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            testID="infinite-catalog1"
            vbHeight={46}
            vbWidth={46}
          >
            <RNSVGPath
              d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
          <Text
            numberOfLines={Infinity}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontWeight": "700",
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 22,
                },
                Object {
                  "color": "#FFFFFF",
                },
              ]
            }
            testID="title-catalog1"
          >
            Predicting the future
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              numberOfLines={Infinity}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontWeight": "400",
                    "paddingBottom": 16,
                    "paddingTop": 8,
                  },
                  Object {
                    "fontSize": 15,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                ]
              }
              testID="subtitle-catalog1"
            >
              Coorpacademy
            </Text>
          </View>
          <View
            style={
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              }
            }
            testID="progressBar-catalog1"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                }
              }
              testID="progression-bar"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#00B0FF",
                    "borderBottomRightRadius": 1,
                    "borderTopRightRadius": 1,
                    "height": 2,
                    "width": "30%",
                  }
                }
                testID="progression-bar-3"
              />
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        numberOfLines={Infinity}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 12,
              "letterSpacing": 2.25,
            },
          ]
        }
        testID="author-catalog1"
      >
        BREGUET CREATION
         CREATION
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Catalog Item Microlearning 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="catalog2"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "height": 205,
      }
    }
  >
    <View
      style={
        Object {
          "height": 107,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "height": 107,
            "width": undefined,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": 107,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderBottomEndRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 8,
                "paddingRight": 12,
              },
              Object {
                "minHeight": 20,
                "minWidth": 45,
              },
            ]
          }
        >
          <Text
            numberOfLines={Infinity}
            style={
              Array [
                "New",
                Object {
                  "fontSize": 12,
                  "fontWeight": "700",
                },
                Object {
                  "color": "#00B0FF",
                },
              ]
            }
            testID="badge-catalog2"
          >
            New
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "justifyContent": "flex-end",
            "marginBottom": 8,
            "marginLeft": 24,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flexGrow": 1,
          "justifyContent": "center",
          "paddingHorizontal": 24,
          "paddingTop": 24,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "flex-end",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontWeight": "700",
                "paddingTop": 8,
              },
              Object {
                "fontSize": 22,
              },
              Object {
                "color": "#546E7A",
              },
            ]
          }
          testID="title-catalog2"
        >
          Predicting the future
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={Infinity}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "flex": 1,
                  "fontWeight": "400",
                  "paddingBottom": 16,
                  "paddingTop": 8,
                },
                Object {
                  "fontSize": 15,
                },
                Object {
                  "color": "#546E7A",
                },
              ]
            }
            testID="subtitle-catalog2"
          >
            Coorpacademy
          </Text>
        </View>
        <View
          style={
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            }
          }
          testID="progressBar-catalog2"
        >
          <View
            style={
              Object {
                "backgroundColor": "#ECEFF1",
              }
            }
            testID="progression-bar"
          >
            <View
              style={
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderBottomRightRadius": 1,
                  "borderTopRightRadius": 1,
                  "height": 2,
                  "width": "30%",
                }
              }
              testID="progression-bar-3"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 24,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        numberOfLines={Infinity}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "textAlign": "center",
              "textShadowColor": "rgba(0, 0, 0, 1)",
              "textShadowRadius": 2,
            },
            Object {
              "fontSize": 12,
              "letterSpacing": 2.25,
            },
          ]
        }
        testID="author-catalog2"
      >
        BREGUET CREATION
         CREATION
      </Text>
    </View>
  </View>
</View>
`;
